tests/models/struct/unnamed/u16/fail/validate.rs
use dade::{model, Result};
#[model]
struct TestModel (
   #[field(validate = validate_fn)]
    u16
);
fn main() {}
